--- a/ExploratoryDataAnalysis.ipynb
+++ b/ExploratoryDataAnalysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjkhFXWQkqcltqGF9Z/2ZB",
+      "authorship_tag": "ABX9TyMLWBANAsd9A5mHBZC2rINL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -653,6 +653,49 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['Pregnancies'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UW5_dHTmkOTW",
+        "outputId": "a7b6ad52-e863-4099-ba5c-255fdc22ccd1"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1     135\n",
+              "0     111\n",
+              "2     103\n",
+              "3      75\n",
+              "4      68\n",
+              "5      57\n",
+              "6      50\n",
+              "7      45\n",
+              "8      38\n",
+              "9      28\n",
+              "10     24\n",
+              "11     11\n",
+              "13     10\n",
+              "12      9\n",
+              "14      2\n",
+              "15      1\n",
+              "17      1\n",
+              "Name: Pregnancies, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     },
